# ManualChamberFLUX

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: ManualChamberFLUX.py  config_manualFLUX.py  data.csv  times.xlsx
tests/: data_example.csv  results_example.csv  times_example.xlsx
