[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ManualChamberFLUX"
version = "1.2"
authors = [
  { name="Mika Korkiakoski", email="mika.korkiakoski@fmi.fi" },
]
description = "Calculates CO2, CH4 and N2O fluxes from manual chamber measurements."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ['alive-progress @ git+https://github.com/rsalmei/alive-progress',
                'matplotlib>=3.4.2',
                'numpy>=1.20.3',
                'pandas>=1.3.3',
                'scipy>=1.7.1'
                ]

[project.urls]
"Homepage" = "https://github.com/mkorkiak/ManualChamberFLUX"
"Bug Tracker" = "https://github.com/mkorkiak/ManualChamberFLUX/issues"
